<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="#f39c12"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lbl_profil_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/profil_diri"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_isinim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_profil_container"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/lbl_nim"
        android:text="@string/nim"/>

    <TextView
        android:id="@+id/lbl_nim"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_profil_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:text="@string/_10119038" />

    <TextView
        android:id="@+id/lbl_isinama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_isinim"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/lbl_nama"
        android:text="@string/nama_lengkap"/>

    <TextView
        android:id="@+id/lbl_nama"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_nim"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:text="@string/rachman_aldiansyah" />

    <TextView
        android:id="@+id/lbl_isikelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_isinama"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/lbl_kelas"
        android:text="@string/kelas"/>

    <TextView
        android:id="@+id/lbl_kelas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_nama"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:text="@string/if_1" />

    <TextView
        android:id="@+id/lbl_isideskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_isikelas"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/lbl_deskripsi"
        android:text="@string/deskripsi_diri"/>

    <TextView
        android:id="@+id/lbl_deskripsi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_kelas"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:text="@string/mahasiswa_program_studi_teknik_informatika_universitas_komputer_indonesia" />

    <LinearLayout
        android:id="@+id/btn_profil"
        android:layout_below="@+id/lbl_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="kembali"
            android:text="Kembali ke Dashboard"/>
    </LinearLayout>

</RelativeLayout>