<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="#f39c12"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lbl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:gravity="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#f39c12"
            android:contentDescription="@string/codingdashboardlogo"
            android:scaleType="centerCrop"
            android:src="@drawable/coding_sloth_splash" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="profile"
            android:text="@string/profile"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="logout"
            android:text="@string/log_out"/>
    </LinearLayout>

</RelativeLayout>