<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="#f39c12"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/lbl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/daftar_akun"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/lbl_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_container"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/txt_fullname"
        android:text="@string/nama_lengkap"/>

    <EditText
        android:id="@+id/txt_fullname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_container"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:inputType="text" />

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_fullname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/txt_email"
        android:text="@string/e_mail"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_fullname"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:inputType="text" />

    <TextView
        android:id="@+id/lbl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_toStartOf="@+id/txt_username"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:inputType="text" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_toStartOf="@+id/txt_password"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/register_container"
        android:layout_below="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="cancel"
            android:text="@string/kembali"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="register"
            android:text="@string/daftar"/>
    </LinearLayout>

</RelativeLayout>