<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="#f39c12"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#f39c12"
            android:contentDescription="@string/codingloginlogo"
            android:scaleType="centerCrop"
            android:src="@drawable/coding_sloth_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_container"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:layout_toStartOf="@+id/txt_username"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_container"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:inputType="text"/>

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:layout_toStartOf="@+id/txt_password"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:inputType="textPassword"/>

    <LinearLayout
        android:id="@+id/signin_container"
        android:layout_below="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="dashboard"
            android:text="@string/sign_in"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="#fff"
            android:onClick="signup"
            android:text="@string/sign_up"/>
    </LinearLayout>

</RelativeLayout>